# budget-bot-rust

./: Cargo.toml
src/: input.rs  lib.rs  main.rs
src/handler/: mod.rs  tokenizer.rs
src/handler/categorizer/: mod.rs  tests.rs
src/handler/date_parser/: english.rs  mod.rs  russian.rs
src/handler/date_parser/russian/: weekdayrus.rs
src/handler/events/: csv.rs  google_docs.rs  mod.rs
src/input/: cli.rs  telegram.rs
