
[package]
name = "tg-bot-playground"
version = "0.1.0"
authors = ["Aleksei Lebedev <allebdev@gmail.com>"]
edition = "2018"

[features]
#default = ["cli"]
cli=[]
telegram=["tbot"]
csv-storage=["csv"]

[dependencies]
tbot = {version="0.6", optional=true}
tokio = {version="0.2", features=["sync", "macros", "time", "rt-core"]}
chrono = {version="0.4", features=["serde"]}
log = "0.4"
env_logger = "0.7"
regex = "1.3"
lazy_static = "1.4.0"
async-trait = "0.1"
csv = {version="1.1", optional=true}
serde = "1.0"
alt_serde_derive = "1.0"