[package]
name = "tg-bot-playground"
version = "0.1.0"
authors = ["Aleksei Lebedev <allebdev@gmail.com>"]
edition = "2018"

[[bin]]
name = "bootstrap"
path = "src/bin/aabudgetbot_awsl.rs"

[features]
default = ["cli", "csv-storage", "parser-en"]
cli = []
telegram = ["tbot"]
csv-storage = ["csv"]
gss-storage = ["google-sheets4", "yup-oauth2", "hyper", "hyper-rustls", "percent-encoding"]
parser-ru = []
parser-en = []
aws-lambda = ["lambda_runtime"]

[dependencies]
tbot = {version="0.6", optional=true}
tokio = {version="0.2", features=["sync", "macros", "time", "rt-core"]}
chrono = {version="0.4", features=["serde"]}
log = "0.4"
env_logger = "0.7"
regex = "1.3"
lazy_static = "1.4.0"
async-trait = "0.1"
csv = {version="1.1", optional=true}
serde = {version="^1.0", features = ["derive"]}
serde_json = "^1.0"
serde_with = "^1.4"
alt_serde_derive = "1.0"
google-sheets4 = {version="1.0.14", optional=true}
yup-oauth2 = {version="^1.0", optional=true}
hyper = {version="^0.10", optional=true}
hyper-rustls = { version = "^0.6", optional = true }
lambda_runtime = { version = "^0.2", optional = true }
percent-encoding = { version = "^2.1", optional = true }